<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.app.elementary.myapplication.opcion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acera_de"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/o1"
                android:textColor="#000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#cd6155"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#af7ac5"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o3" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#5499c7"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o4" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#48c9b0"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o5" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#f4d03f"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o6" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#dc7633"
                android:clickable="false"
                android:cursorVisible="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/o7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crador"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>